--- a/src/themelib_sap_horizon/src/sap/m/themes/sap_horizon_dark/Link.less
+++ b/src/themelib_sap_horizon/src/sap/m/themes/sap_horizon_dark/Link.less
@@ -51,6 +51,13 @@ html.sap-desktop .sapMLnk:not(.sapMLnkDsbl) {
 
 .sapMLnk:not(.sapMLnkDsbl) {
 	text-shadow: var(--sapContent_TextShadow);
+	&:focus-visible {
+		border-radius: 0.125rem;
+		background-color: var(--sapContent_FocusColor);
+		color: var(--sapContent_ContrastTextColor);
+		text-shadow: none;
+		outline: none;
+	}
 }
 
 /* align Link in Form with Label */
